manifest/objects/dfsle__EnvelopeConfigurationDocument__c.object
<CustomObject>
    <fields>
        <fullName>dfsle__EnvelopeConfiguration__c</fullName>
        <label>DocuSign Envelope Configuration</label>
        <referenceTo>dfsle__EnvelopeConfiguration__c</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>dfsle__Extension__c</fullName>
        <label>Extension</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dfsle__Filter__c</fullName>
        <description>Source file filter</description>
        <label>Source file filter</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dfsle__Name__c</fullName>
        <label>Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dfsle__ReadOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Read-only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dfsle__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dfsle__Sequence__c</fullName>
        <label>Document Sequence</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dfsle__SourceId__c</fullName>
        <label>Source ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dfsle__Type__c</fullName>
        <description>Document Type</description>
        <inlineHelpText>Document Type</inlineHelpText>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TemplateDocument</fullName>
                    <label>Template Document</label>
                </value>
                <value>
                    <fullName>SourceFiles</fullName>
                    <label>Source Files</label>
                </value>
                <value>
                    <fullName>Template</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Docusign Envelope Configuration Document</label>
    <nameField>
        <displayFormat>DEC-{0000000}</displayFormat>
        <label>Document</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Docusign Envelope Configuration Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>